S20 set div width 80%

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
 
 }
 div {
-    width: 300px;
-    background-color: rgb(228,202, 168);
+    width: 80%;
+    /* background-color: rgb(228,202, 168); */
+    background-color: orange;
 }
