--- a/css/style.css
+++ b/css/style.css
@@ -9,4 +9,6 @@ div {
     width: 80%;
     /* background-color: rgb(228,202, 168); */
     background-color: orange;
+    margin-left: auto;
+    margin-right: auto;
 }
