S22 set div class teaMenu

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     background: rgb(228,202, 168);
 
 }
-div {
+.teaMenu {
     width: 80%;
     /* background-color: rgb(228,202, 168); */
     background-color: orange;
