--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@ h1, h2, p {
 }
 body {
     background: rgb(228,202, 168);
+    background-image: url(/img/tamara-malaniy-A4zCoa8800U-unsplash.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 
 }
 .teaMenu {
