--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+.teaItem{
+    background-color: red;
+    display: inline-block;
+}
 .teaFlavor{
     text-align: left;
 }
