--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
-.teaItem{
+.teaItem p{
     background-color: red;
     display: inline-block;
 }
