--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 .teaMenu {
     width: 80%;
     /* background-color: rgb(228,202, 168); */
-    background-color: orange;
+    background-color: rgba(228, 202, 168, 0.406);
     margin-left: auto;
     margin-right: auto;
 }
