S44 adding padding 20px to teamenu

--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,11 @@ body {
     background-color: rgba(228, 202, 168, 0.406);
     margin-left: auto;
     margin-right: auto;
+    padding: 20px;
     
 }
 .teaItem p{
-    background-color: red; 
+    /* background-color: red;  */
     display: inline-block;
 }
 
