--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
 }
 .teaMenu {
     width: 80%;
+    max-width: 500px;
     /* background-color: rgb(228,202, 168); */
     background-color: rgba(228, 202, 168, 0.406);
     margin-left: auto;
@@ -21,6 +22,7 @@ body {
 .teaItem p{
     /* background-color: red;  */
     display: inline-block;
+    font-weight: 400;
 }
 
 /* p{
