S45 adding font family in established class

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,9 @@ body {
     font-family: 'Roboto', sans-serif;
 
 }
+.established{
+    font-style: italic;
+}
 .teaMenu {
     width: 80%;
     max-width: 500px;
