--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
 h1, h2, p {
     text-align: center;
+
+}
+h1{
+    font-size: 40px;
+}
+h2{
+    font-size: 35px;
 }
 body {
     background: rgb(228,202, 168);
